fixed padding issue on firefox and fixed article content positioning

--- a/css/style.css
+++ b/css/style.css
@@ -444,7 +444,7 @@ li a{
 
   }
   .droplist li{
-    padding: 0.5em;
+    /*padding: 0.5em;*/
     margin:0;
     min-width: max-content;
 
@@ -462,13 +462,7 @@ li a{
     font-size: 1em;
     background: rgba(37, 66, 96, 1);
   }
-  .content h1{
-    padding: 0.5em;
-    margin: 0.5em;
-    position: relative;
-    left: 7em;
-    z-index: -1;
-  }
+
   .mclosebtn {
     top: 0;
     color: white;
@@ -493,17 +487,33 @@ li a{
   background-color: rgb(66, 73, 87);
   transition: all 0.5s ease-in-out;
 }
+article.content{
+  display: flex;
+  justify-content: center;
+}
+.content h1{
+  padding: 0.5em;
+  margin: 0.5em;
+  position: relative;
+  left: 0;
+  z-index: -1;
+}
 
   /* Desktop and up */
   @media screen and (min-width: 64em) {
 .mclosebtn{
   left: 7.5em;
 }
-
-
-    .content h1 {
-      left: 12.5em;
-    }
+/*article.content{*/
+/*display: flex;*/
+/*  justify-content: center;*/
+/*}*/
+/*.content h1{*/
+/*  left: 0;*/
+/*}*/
+    /*.content h1 {*/
+    /*  left: 12.5em;*/
+    /*}*/
   }
 
 
